--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 <body>
 
   <div class="container">
-    <h1>20 Reasons why You Might Forgive Me ❤
-        Sorry My Queen
+    <h1>20 ReasonswWhy Forgive Me ❤
+        I'm Sorry My Queen 🥺
     </h1>
     <div id="list-container"></div>
   </div>
@@ -178,26 +178,26 @@
     const container = document.getElementById("list-container");
 
     const reasons = [
-      "Because I never meant to hurt you, and the last thing I want is to see you upset.",
-      "Because my heart has always been honest with you.",
-      "Because I learn from my mistakes and want to grow for you.",
-      "Because you mean more to me than anything.",
-      "Because I want to be better for you every day.",
-      "Because our memories deserve more than a mistake.",
-      "Because I genuinely care about your feelings.",
-      "Because even when I mess up, you're always in my thoughts.",
-      "Because my intentions are pure, even when my actions slip.",
-      "Because your smile means everything to me.",
-      "Because I'm willing to admit when I'm wrong.",
-      "Because forgiveness reflects your kindness and strength.",
-      "Because I want to make it up to you however long it takes.",
-      "Because you mean more than my ego ever could.",
-      "Because I hate distance between us.",
-      "Because what we share is rare and valuable.",
-      "Because I will be more thoughtful from now on.",
-      "Because I will never take you for granted.",
-      "Because my apology comes from my heart.",
-      "Because I truly can't imagine life without you."
+      "Because I never meant to hurt you, and the last thing I want is to see you upset.🥺",
+      "Because my heart has always been honest with you.🥹",
+      "Because I learn from my mistakes and want to grow for you.🫰",
+      "Because you mean more to me than anything.🤧",
+      "Because I want to be better for you every day.😭",
+      "Because our memories deserve more than a mistake.😫",
+      "Because I genuinely care about your feelings.🥺",
+      "Because even when I mess up, you're always in my thoughts.😭",
+      "Because my intentions are pure, even when my actions slip.🥺",
+      "Because your smile means everything to me.😔",
+      "Because I'm willing to admit when I'm wrong.🥺",
+      "Because forgiveness reflects your kindness and strength.😔",
+      "Because I want to make it up to you however long it takes.🥹",
+      "Because you mean more than my ego ever could.😮‍💨",
+      "Because I hate distance between us.🤌",
+      "Because what we share is rare and valuable.❤️‍🩹",
+      "Because I will be more thoughtful from now on.🥹",
+      "Because I will never take you for granted.😔",
+      "Because my apology comes from my heart.🥺",
+      "Because I truly can't imagine life without you.🥺"
     ];
 
     reasons.forEach((text, i) => {
